# unitree_rl_lab

./: .gitignore  cm_train.sh  pyproject.toml  unitree_rl_lab.sh
scripts/: list_envs.py
scripts/rsl_rl/: train.py
source/custom_lab/: setup.py
source/custom_lab/custom_lab/Agent/: __init__.py
source/custom_lab/custom_lab/Agent/ppo/: rsl_rl_ppo_cfg.py
source/custom_lab/custom_lab/Agent/task/: g1_task_cfg.py
source/custom_lab/custom_lab/assets/robots/unitree/: unitree.py
source/custom_lab/custom_lab/env/: g1_env.py
source/custom_lab/custom_lab/env/assets/: __init__.py  articulation.py  articulation_cfg.py  articulation_data.py
source/custom_lab/custom_lab/isaaclab/: manager_base_rl_env.py
source/custom_lab/custom_lab/mdp/: observations.py  rewards.py
source/custom_lab/custom_lab/mdp/commands/: __init__.py  step_command.py  velocity_command.py
source/custom_lab/custom_lab/utils/: math.py
source/labDynamics/: pyproject.toml  setup.py
source/labDynamics/cusadi/: .gitignore  CMakeLists.txt  run_benchmarks.py  run_codegen.py  run_cusadi_function_test.py
source/labDynamics/cusadi/src/: CusadiFunction.py  generateCUDACode.py  generatePytorchCode.py
source/labDynamics/labDynamics/: __init__.py  forward_kinematics.py  key_point.py  pin_lab_convert.py
source/labDynamics/pin2lab/g1_29dof_pin_lab_map/: pin_lab_mapping.csv
source/unitree_rl_lab/: pyproject.toml
source/unitree_rl_lab/unitree_rl_lab/assets/robots/: unitree.py
