[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "labDynamics"
version = "0.0.1"
description = "Unitree Robots Dynamic."
dependencies = [
    "argcomplete",
]
requires-python = ">=3.10"
license = { text = "Apache 2.0" }
authors = [
    { name = "David Zong" }
]
maintainers = [
    { name = "David Zong" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux"
]
dynamic = []
[tool.pyright]

