cmake_minimum_required(VERSION 3.15)
project(CusADi)

# Find CUDA package
include(CheckLanguage)
check_language(CUDA)
find_package(CUDAToolkit REQUIRED)
if(CMAKE_CUDA_COMPILER)
enable_language(CUDA)
include_directories(${CUDA_INCLUDE_DIRS})
message("CUDA found")
endif()
if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
    set(CMAKE_CUDA_ARCHITECTURES 75 86)
endif()
message(${CMAKE_CUDA_ARCHITECTURES})

# Set C++ standard
set(CMAKE_CXX_STANDARD 11)

# Set CUDA flags
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -O3 -arch=sm_86 --use_fast_math)  # Adjust architecture as needed

set(CMM_G1_29DOF_SOURCE codegen/CMM_g1_29dof.cu)
set(KEY_POINT_LEFT_ELBOW_JOINT_ROT_BF_G1_29DOF_SOURCE codegen/key_point_left_elbow_joint_rot_bf_g1_29dof.cu)
set(FK_LEFT_WRIST_YAW_LINK_G1_29DOF_SOURCE codegen/fk_left_wrist_yaw_link_g1_29dof.cu)
set(KEY_POINT_LEFT_KNEE_JOINT_LIN_VEL_G1_29DOF_SOURCE codegen/key_point_left_knee_joint_lin_vel_g1_29dof.cu)
set(CM_G1_29DOF_SOURCE codegen/CM_g1_29dof.cu)
set(KEY_POINT_RIGHT_KNEE_JOINT_LIN_VEL_G1_29DOF_SOURCE codegen/key_point_right_knee_joint_lin_vel_g1_29dof.cu)
set(FK_RIGHT_WRIST_YAW_LINK_G1_29DOF_SOURCE codegen/fk_right_wrist_yaw_link_g1_29dof.cu)
set(KEY_POINT_LEFT_SHOULDER_PITCH_JOINT_LIN_VEL_G1_29DOF_SOURCE codegen/key_point_left_shoulder_pitch_joint_lin_vel_g1_29dof.cu)
set(JACOBIAN_RIGHT_WRIST_YAW_LINK_G1_29DOF_SOURCE codegen/jacobian_right_wrist_yaw_link_g1_29dof.cu)
set(KEY_POINT_LEFT_KNEE_JOINT_ANG_VEL_G1_29DOF_SOURCE codegen/key_point_left_knee_joint_ang_vel_g1_29dof.cu)
set(KEY_POINT_LEFT_ANKLE_ROLL_JOINT_ROT_BF_G1_29DOF_SOURCE codegen/key_point_left_ankle_roll_joint_rot_bf_g1_29dof.cu)
set(KEY_POINT_LEFT_WRIST_YAW_JOINT_POS_BF_G1_29DOF_SOURCE codegen/key_point_left_wrist_yaw_joint_pos_bf_g1_29dof.cu)
set(KEY_POINT_RIGHT_ANKLE_ROLL_JOINT_POS_BF_G1_29DOF_SOURCE codegen/key_point_right_ankle_roll_joint_pos_bf_g1_29dof.cu)
set(KEY_POINT_RIGHT_WRIST_YAW_JOINT_LIN_VEL_G1_29DOF_SOURCE codegen/key_point_right_wrist_yaw_joint_lin_vel_g1_29dof.cu)
set(KEY_POINT_RIGHT_WRIST_YAW_JOINT_POS_BF_G1_29DOF_SOURCE codegen/key_point_right_wrist_yaw_joint_pos_bf_g1_29dof.cu)
set(KEY_POINT_LEFT_ANKLE_ROLL_JOINT_POS_BF_G1_29DOF_SOURCE codegen/key_point_left_ankle_roll_joint_pos_bf_g1_29dof.cu)
set(FK_RIGHT_ANKLE_ROLL_LINK_G1_29DOF_SOURCE codegen/fk_right_ankle_roll_link_g1_29dof.cu)
set(KEY_POINT_LEFT_WRIST_YAW_JOINT_ROT_BF_G1_29DOF_SOURCE codegen/key_point_left_wrist_yaw_joint_rot_bf_g1_29dof.cu)
set(KEY_POINT_RIGHT_ANKLE_ROLL_JOINT_ANG_VEL_G1_29DOF_SOURCE codegen/key_point_right_ankle_roll_joint_ang_vel_g1_29dof.cu)
set(FK_LEFT_ANKLE_ROLL_LINK_G1_29DOF_SOURCE codegen/fk_left_ankle_roll_link_g1_29dof.cu)
set(KEY_POINT_RIGHT_SHOULDER_PITCH_JOINT_LIN_VEL_G1_29DOF_SOURCE codegen/key_point_right_shoulder_pitch_joint_lin_vel_g1_29dof.cu)
set(KEY_POINT_RIGHT_ELBOW_JOINT_ANG_VEL_G1_29DOF_SOURCE codegen/key_point_right_elbow_joint_ang_vel_g1_29dof.cu)
set(KEY_POINT_RIGHT_SHOULDER_PITCH_JOINT_ROT_BF_G1_29DOF_SOURCE codegen/key_point_right_shoulder_pitch_joint_rot_bf_g1_29dof.cu)
set(KEY_POINT_LEFT_ELBOW_JOINT_LIN_VEL_G1_29DOF_SOURCE codegen/key_point_left_elbow_joint_lin_vel_g1_29dof.cu)
set(COM_G1_29DOF_SOURCE codegen/CoM_g1_29dof.cu)
set(KEY_POINT_LEFT_ANKLE_ROLL_JOINT_LIN_VEL_G1_29DOF_SOURCE codegen/key_point_left_ankle_roll_joint_lin_vel_g1_29dof.cu)
set(KEY_POINT_RIGHT_SHOULDER_PITCH_JOINT_POS_BF_G1_29DOF_SOURCE codegen/key_point_right_shoulder_pitch_joint_pos_bf_g1_29dof.cu)
set(KEY_POINT_RIGHT_WRIST_YAW_JOINT_ANG_VEL_G1_29DOF_SOURCE codegen/key_point_right_wrist_yaw_joint_ang_vel_g1_29dof.cu)
set(KEY_POINT_RIGHT_SHOULDER_PITCH_JOINT_ANG_VEL_G1_29DOF_SOURCE codegen/key_point_right_shoulder_pitch_joint_ang_vel_g1_29dof.cu)
set(KEY_POINT_LEFT_SHOULDER_PITCH_JOINT_ANG_VEL_G1_29DOF_SOURCE codegen/key_point_left_shoulder_pitch_joint_ang_vel_g1_29dof.cu)
set(KEY_POINT_RIGHT_ANKLE_ROLL_JOINT_ROT_BF_G1_29DOF_SOURCE codegen/key_point_right_ankle_roll_joint_rot_bf_g1_29dof.cu)
set(KEY_POINT_RIGHT_ELBOW_JOINT_LIN_VEL_G1_29DOF_SOURCE codegen/key_point_right_elbow_joint_lin_vel_g1_29dof.cu)
set(KEY_POINT_LEFT_SHOULDER_PITCH_JOINT_ROT_BF_G1_29DOF_SOURCE codegen/key_point_left_shoulder_pitch_joint_rot_bf_g1_29dof.cu)
set(KEY_POINT_LEFT_ANKLE_ROLL_JOINT_ANG_VEL_G1_29DOF_SOURCE codegen/key_point_left_ankle_roll_joint_ang_vel_g1_29dof.cu)
set(KEY_POINT_LEFT_WRIST_YAW_JOINT_LIN_VEL_G1_29DOF_SOURCE codegen/key_point_left_wrist_yaw_joint_lin_vel_g1_29dof.cu)
set(G_G1_29DOF_SOURCE codegen/G_g1_29dof.cu)
set(KEY_POINT_RIGHT_ANKLE_ROLL_JOINT_LIN_VEL_G1_29DOF_SOURCE codegen/key_point_right_ankle_roll_joint_lin_vel_g1_29dof.cu)
set(M_G1_29DOF_SOURCE codegen/M_g1_29dof.cu)
set(KEY_POINT_RIGHT_KNEE_JOINT_ROT_BF_G1_29DOF_SOURCE codegen/key_point_right_knee_joint_rot_bf_g1_29dof.cu)
set(KEY_POINT_LEFT_SHOULDER_PITCH_JOINT_POS_BF_G1_29DOF_SOURCE codegen/key_point_left_shoulder_pitch_joint_pos_bf_g1_29dof.cu)
set(KEY_POINT_LEFT_KNEE_JOINT_ROT_BF_G1_29DOF_SOURCE codegen/key_point_left_knee_joint_rot_bf_g1_29dof.cu)
set(KEY_POINT_RIGHT_WRIST_YAW_JOINT_ROT_BF_G1_29DOF_SOURCE codegen/key_point_right_wrist_yaw_joint_rot_bf_g1_29dof.cu)
set(BASE_ROT_G1_29DOF_SOURCE codegen/base_rot_g1_29dof.cu)
set(BASE_POS_G1_29DOF_SOURCE codegen/base_pos_g1_29dof.cu)
set(DCM_G1_29DOF_SOURCE codegen/dCM_g1_29dof.cu)
set(KEY_POINT_RIGHT_ELBOW_JOINT_ROT_BF_G1_29DOF_SOURCE codegen/key_point_right_elbow_joint_rot_bf_g1_29dof.cu)
set(KEY_POINT_RIGHT_KNEE_JOINT_ANG_VEL_G1_29DOF_SOURCE codegen/key_point_right_knee_joint_ang_vel_g1_29dof.cu)
set(KEY_POINT_RIGHT_KNEE_JOINT_POS_BF_G1_29DOF_SOURCE codegen/key_point_right_knee_joint_pos_bf_g1_29dof.cu)
set(KEY_POINT_LEFT_WRIST_YAW_JOINT_ANG_VEL_G1_29DOF_SOURCE codegen/key_point_left_wrist_yaw_joint_ang_vel_g1_29dof.cu)
set(KEY_POINT_LEFT_ELBOW_JOINT_POS_BF_G1_29DOF_SOURCE codegen/key_point_left_elbow_joint_pos_bf_g1_29dof.cu)
set(KEY_POINT_LEFT_ELBOW_JOINT_ANG_VEL_G1_29DOF_SOURCE codegen/key_point_left_elbow_joint_ang_vel_g1_29dof.cu)
set(KEY_POINT_LEFT_KNEE_JOINT_POS_BF_G1_29DOF_SOURCE codegen/key_point_left_knee_joint_pos_bf_g1_29dof.cu)
set(JACOBIAN_LEFT_WRIST_YAW_LINK_G1_29DOF_SOURCE codegen/jacobian_left_wrist_yaw_link_g1_29dof.cu)
set(KEY_POINT_RIGHT_ELBOW_JOINT_POS_BF_G1_29DOF_SOURCE codegen/key_point_right_elbow_joint_pos_bf_g1_29dof.cu)
set(JACOBIAN_LEFT_ANKLE_ROLL_LINK_G1_29DOF_SOURCE codegen/jacobian_left_ankle_roll_link_g1_29dof.cu)
set(DCMM_G1_29DOF_SOURCE codegen/dCMM_g1_29dof.cu)
set(JACOBIAN_RIGHT_ANKLE_ROLL_LINK_G1_29DOF_SOURCE codegen/jacobian_right_ankle_roll_link_g1_29dof.cu)
set(C_G1_29DOF_SOURCE codegen/C_g1_29dof.cu)

# Include directories for your header files
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_library(CMM_g1_29dof SHARED ${CMM_G1_29DOF_SOURCE})
target_link_libraries(CMM_g1_29dof)
add_library(key_point_left_elbow_joint_rot_bf_g1_29dof SHARED ${KEY_POINT_LEFT_ELBOW_JOINT_ROT_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_elbow_joint_rot_bf_g1_29dof)
add_library(fk_left_wrist_yaw_link_g1_29dof SHARED ${FK_LEFT_WRIST_YAW_LINK_G1_29DOF_SOURCE})
target_link_libraries(fk_left_wrist_yaw_link_g1_29dof)
add_library(key_point_left_knee_joint_lin_vel_g1_29dof SHARED ${KEY_POINT_LEFT_KNEE_JOINT_LIN_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_knee_joint_lin_vel_g1_29dof)
add_library(CM_g1_29dof SHARED ${CM_G1_29DOF_SOURCE})
target_link_libraries(CM_g1_29dof)
add_library(key_point_right_knee_joint_lin_vel_g1_29dof SHARED ${KEY_POINT_RIGHT_KNEE_JOINT_LIN_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_knee_joint_lin_vel_g1_29dof)
add_library(fk_right_wrist_yaw_link_g1_29dof SHARED ${FK_RIGHT_WRIST_YAW_LINK_G1_29DOF_SOURCE})
target_link_libraries(fk_right_wrist_yaw_link_g1_29dof)
add_library(key_point_left_shoulder_pitch_joint_lin_vel_g1_29dof SHARED ${KEY_POINT_LEFT_SHOULDER_PITCH_JOINT_LIN_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_shoulder_pitch_joint_lin_vel_g1_29dof)
add_library(jacobian_right_wrist_yaw_link_g1_29dof SHARED ${JACOBIAN_RIGHT_WRIST_YAW_LINK_G1_29DOF_SOURCE})
target_link_libraries(jacobian_right_wrist_yaw_link_g1_29dof)
add_library(key_point_left_knee_joint_ang_vel_g1_29dof SHARED ${KEY_POINT_LEFT_KNEE_JOINT_ANG_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_knee_joint_ang_vel_g1_29dof)
add_library(key_point_left_ankle_roll_joint_rot_bf_g1_29dof SHARED ${KEY_POINT_LEFT_ANKLE_ROLL_JOINT_ROT_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_ankle_roll_joint_rot_bf_g1_29dof)
add_library(key_point_left_wrist_yaw_joint_pos_bf_g1_29dof SHARED ${KEY_POINT_LEFT_WRIST_YAW_JOINT_POS_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_wrist_yaw_joint_pos_bf_g1_29dof)
add_library(key_point_right_ankle_roll_joint_pos_bf_g1_29dof SHARED ${KEY_POINT_RIGHT_ANKLE_ROLL_JOINT_POS_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_ankle_roll_joint_pos_bf_g1_29dof)
add_library(key_point_right_wrist_yaw_joint_lin_vel_g1_29dof SHARED ${KEY_POINT_RIGHT_WRIST_YAW_JOINT_LIN_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_wrist_yaw_joint_lin_vel_g1_29dof)
add_library(key_point_right_wrist_yaw_joint_pos_bf_g1_29dof SHARED ${KEY_POINT_RIGHT_WRIST_YAW_JOINT_POS_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_wrist_yaw_joint_pos_bf_g1_29dof)
add_library(key_point_left_ankle_roll_joint_pos_bf_g1_29dof SHARED ${KEY_POINT_LEFT_ANKLE_ROLL_JOINT_POS_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_ankle_roll_joint_pos_bf_g1_29dof)
add_library(fk_right_ankle_roll_link_g1_29dof SHARED ${FK_RIGHT_ANKLE_ROLL_LINK_G1_29DOF_SOURCE})
target_link_libraries(fk_right_ankle_roll_link_g1_29dof)
add_library(key_point_left_wrist_yaw_joint_rot_bf_g1_29dof SHARED ${KEY_POINT_LEFT_WRIST_YAW_JOINT_ROT_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_wrist_yaw_joint_rot_bf_g1_29dof)
add_library(key_point_right_ankle_roll_joint_ang_vel_g1_29dof SHARED ${KEY_POINT_RIGHT_ANKLE_ROLL_JOINT_ANG_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_ankle_roll_joint_ang_vel_g1_29dof)
add_library(fk_left_ankle_roll_link_g1_29dof SHARED ${FK_LEFT_ANKLE_ROLL_LINK_G1_29DOF_SOURCE})
target_link_libraries(fk_left_ankle_roll_link_g1_29dof)
add_library(key_point_right_shoulder_pitch_joint_lin_vel_g1_29dof SHARED ${KEY_POINT_RIGHT_SHOULDER_PITCH_JOINT_LIN_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_shoulder_pitch_joint_lin_vel_g1_29dof)
add_library(key_point_right_elbow_joint_ang_vel_g1_29dof SHARED ${KEY_POINT_RIGHT_ELBOW_JOINT_ANG_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_elbow_joint_ang_vel_g1_29dof)
add_library(key_point_right_shoulder_pitch_joint_rot_bf_g1_29dof SHARED ${KEY_POINT_RIGHT_SHOULDER_PITCH_JOINT_ROT_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_shoulder_pitch_joint_rot_bf_g1_29dof)
add_library(key_point_left_elbow_joint_lin_vel_g1_29dof SHARED ${KEY_POINT_LEFT_ELBOW_JOINT_LIN_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_elbow_joint_lin_vel_g1_29dof)
add_library(CoM_g1_29dof SHARED ${COM_G1_29DOF_SOURCE})
target_link_libraries(CoM_g1_29dof)
add_library(key_point_left_ankle_roll_joint_lin_vel_g1_29dof SHARED ${KEY_POINT_LEFT_ANKLE_ROLL_JOINT_LIN_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_ankle_roll_joint_lin_vel_g1_29dof)
add_library(key_point_right_shoulder_pitch_joint_pos_bf_g1_29dof SHARED ${KEY_POINT_RIGHT_SHOULDER_PITCH_JOINT_POS_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_shoulder_pitch_joint_pos_bf_g1_29dof)
add_library(key_point_right_wrist_yaw_joint_ang_vel_g1_29dof SHARED ${KEY_POINT_RIGHT_WRIST_YAW_JOINT_ANG_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_wrist_yaw_joint_ang_vel_g1_29dof)
add_library(key_point_right_shoulder_pitch_joint_ang_vel_g1_29dof SHARED ${KEY_POINT_RIGHT_SHOULDER_PITCH_JOINT_ANG_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_shoulder_pitch_joint_ang_vel_g1_29dof)
add_library(key_point_left_shoulder_pitch_joint_ang_vel_g1_29dof SHARED ${KEY_POINT_LEFT_SHOULDER_PITCH_JOINT_ANG_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_shoulder_pitch_joint_ang_vel_g1_29dof)
add_library(key_point_right_ankle_roll_joint_rot_bf_g1_29dof SHARED ${KEY_POINT_RIGHT_ANKLE_ROLL_JOINT_ROT_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_ankle_roll_joint_rot_bf_g1_29dof)
add_library(key_point_right_elbow_joint_lin_vel_g1_29dof SHARED ${KEY_POINT_RIGHT_ELBOW_JOINT_LIN_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_elbow_joint_lin_vel_g1_29dof)
add_library(key_point_left_shoulder_pitch_joint_rot_bf_g1_29dof SHARED ${KEY_POINT_LEFT_SHOULDER_PITCH_JOINT_ROT_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_shoulder_pitch_joint_rot_bf_g1_29dof)
add_library(key_point_left_ankle_roll_joint_ang_vel_g1_29dof SHARED ${KEY_POINT_LEFT_ANKLE_ROLL_JOINT_ANG_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_ankle_roll_joint_ang_vel_g1_29dof)
add_library(key_point_left_wrist_yaw_joint_lin_vel_g1_29dof SHARED ${KEY_POINT_LEFT_WRIST_YAW_JOINT_LIN_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_wrist_yaw_joint_lin_vel_g1_29dof)
add_library(G_g1_29dof SHARED ${G_G1_29DOF_SOURCE})
target_link_libraries(G_g1_29dof)
add_library(key_point_right_ankle_roll_joint_lin_vel_g1_29dof SHARED ${KEY_POINT_RIGHT_ANKLE_ROLL_JOINT_LIN_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_ankle_roll_joint_lin_vel_g1_29dof)
add_library(M_g1_29dof SHARED ${M_G1_29DOF_SOURCE})
target_link_libraries(M_g1_29dof)
add_library(key_point_right_knee_joint_rot_bf_g1_29dof SHARED ${KEY_POINT_RIGHT_KNEE_JOINT_ROT_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_knee_joint_rot_bf_g1_29dof)
add_library(key_point_left_shoulder_pitch_joint_pos_bf_g1_29dof SHARED ${KEY_POINT_LEFT_SHOULDER_PITCH_JOINT_POS_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_shoulder_pitch_joint_pos_bf_g1_29dof)
add_library(key_point_left_knee_joint_rot_bf_g1_29dof SHARED ${KEY_POINT_LEFT_KNEE_JOINT_ROT_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_knee_joint_rot_bf_g1_29dof)
add_library(key_point_right_wrist_yaw_joint_rot_bf_g1_29dof SHARED ${KEY_POINT_RIGHT_WRIST_YAW_JOINT_ROT_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_wrist_yaw_joint_rot_bf_g1_29dof)
add_library(base_rot_g1_29dof SHARED ${BASE_ROT_G1_29DOF_SOURCE})
target_link_libraries(base_rot_g1_29dof)
add_library(base_pos_g1_29dof SHARED ${BASE_POS_G1_29DOF_SOURCE})
target_link_libraries(base_pos_g1_29dof)
add_library(dCM_g1_29dof SHARED ${DCM_G1_29DOF_SOURCE})
target_link_libraries(dCM_g1_29dof)
add_library(key_point_right_elbow_joint_rot_bf_g1_29dof SHARED ${KEY_POINT_RIGHT_ELBOW_JOINT_ROT_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_elbow_joint_rot_bf_g1_29dof)
add_library(key_point_right_knee_joint_ang_vel_g1_29dof SHARED ${KEY_POINT_RIGHT_KNEE_JOINT_ANG_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_knee_joint_ang_vel_g1_29dof)
add_library(key_point_right_knee_joint_pos_bf_g1_29dof SHARED ${KEY_POINT_RIGHT_KNEE_JOINT_POS_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_knee_joint_pos_bf_g1_29dof)
add_library(key_point_left_wrist_yaw_joint_ang_vel_g1_29dof SHARED ${KEY_POINT_LEFT_WRIST_YAW_JOINT_ANG_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_wrist_yaw_joint_ang_vel_g1_29dof)
add_library(key_point_left_elbow_joint_pos_bf_g1_29dof SHARED ${KEY_POINT_LEFT_ELBOW_JOINT_POS_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_elbow_joint_pos_bf_g1_29dof)
add_library(key_point_left_elbow_joint_ang_vel_g1_29dof SHARED ${KEY_POINT_LEFT_ELBOW_JOINT_ANG_VEL_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_elbow_joint_ang_vel_g1_29dof)
add_library(key_point_left_knee_joint_pos_bf_g1_29dof SHARED ${KEY_POINT_LEFT_KNEE_JOINT_POS_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_left_knee_joint_pos_bf_g1_29dof)
add_library(jacobian_left_wrist_yaw_link_g1_29dof SHARED ${JACOBIAN_LEFT_WRIST_YAW_LINK_G1_29DOF_SOURCE})
target_link_libraries(jacobian_left_wrist_yaw_link_g1_29dof)
add_library(key_point_right_elbow_joint_pos_bf_g1_29dof SHARED ${KEY_POINT_RIGHT_ELBOW_JOINT_POS_BF_G1_29DOF_SOURCE})
target_link_libraries(key_point_right_elbow_joint_pos_bf_g1_29dof)
add_library(jacobian_left_ankle_roll_link_g1_29dof SHARED ${JACOBIAN_LEFT_ANKLE_ROLL_LINK_G1_29DOF_SOURCE})
target_link_libraries(jacobian_left_ankle_roll_link_g1_29dof)
add_library(dCMM_g1_29dof SHARED ${DCMM_G1_29DOF_SOURCE})
target_link_libraries(dCMM_g1_29dof)
add_library(jacobian_right_ankle_roll_link_g1_29dof SHARED ${JACOBIAN_RIGHT_ANKLE_ROLL_LINK_G1_29DOF_SOURCE})
target_link_libraries(jacobian_right_ankle_roll_link_g1_29dof)
add_library(C_g1_29dof SHARED ${C_G1_29DOF_SOURCE})
target_link_libraries(C_g1_29dof)
